add basic voice composition + start/stop button
* parse sound resources names to sort them in categories
* sound resources must be in res/raw/snd_CAT_ID where
  CAT is use as the caregory and ID is just to make the
  distinction between all the files
* start/stop a thread when pressing the button which runs
  the sound sequence

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">HNY</string>
-    <string name="btn_snd_happy">Happy</string>
+    <string name="btn_snd_happy">Happy New Year</string>
 </resources>
