--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">HNY</string>
-    <string name="btn_snd_happy">Happy New Year</string>
+    <string name="app_name">Happy New Year</string>
+    <string name="btn_snd_happy">START / STOP</string>
 </resources>
