update button text with current state
Show START, STOP and Stopping... on the button.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Happy New Year</string>
-    <string name="btn_snd_happy">START / STOP</string>
+    <string name="start">START</string>
+    <string name="stop">STOP</string>
+    <string name="stopping">Stopping...</string>
     <string name="lbl_voices_happy">HAPPY</string>
     <string name="lbl_voices_new">NEW</string>
     <string name="lbl_voices_year">YEAR</string>
